[gd_scene load_steps=25 format=2]

[ext_resource path="res://Action RPG Resources/World/Bush.png" type="Texture" id=1]
[ext_resource path="res://Action RPG Resources/World/GrassBackground.png" type="Texture" id=2]
[ext_resource path="res://jogoComPixelArt.gd" type="Script" id=3]
[ext_resource path="res://Action RPG Resources/Player/Player.png" type="Texture" id=4]
[ext_resource path="res://KinematicBody2D.gd" type="Script" id=5]
[ext_resource path="res://Action RPG Resources/World/DirtTileset.png" type="Texture" id=6]
[ext_resource path="res://Action RPG Resources/Player/RpgCharacterShadow.png" type="Texture" id=7]
[ext_resource path="res://Action RPG Resources/World/DirtTileset2.png" type="Texture" id=8]

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 6.24009, 1.90603 )

[sub_resource type="RectangleShape2D" id=14]
extents = Vector2( 14, 14 )

[sub_resource type="RectangleShape2D" id=16]
extents = Vector2( 0.833304, 3.60772 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 12, 6.49998 )

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( -11.1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}

[sub_resource type="Animation" id=10]
resource_name = "bater_baixo"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 36, 37, 38, 39, 18 ]
}

[sub_resource type="Animation" id=11]
resource_name = "bater_cima"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 28, 29, 30, 31, 6 ]
}

[sub_resource type="Animation" id=9]
resource_name = "bater_direita"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 24, 25, 26, 27, 0 ]
}

[sub_resource type="Animation" id=12]
resource_name = "bater_esquerda"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 32, 33, 34, 35, 12 ]
}

[sub_resource type="Animation" id=6]
resource_name = "correndo_para_baixo"
length = 0.55
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 19, 20, 21, 22, 23, 18 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sombra:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 36, 34 ), Vector2( 36, 33 ), Vector2( 36, 34 ), Vector2( 36, 33 ), Vector2( 36, 34 ), Vector2( 36, 33 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 36, 34 ), Vector2( 36, 33 ), Vector2( 36, 34 ), Vector2( 36, 33 ), Vector2( 36, 34 ), Vector2( 36, 33 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "correndo_para_cima"
length = 0.55
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 7, 8, 9, 10, 11, 6 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 36, 34 ), Vector2( 36, 33 ), Vector2( 36, 34 ), Vector2( 36, 33 ), Vector2( 36, 34 ), Vector2( 36, 33 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sombra:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 36, 34 ), Vector2( 36, 33 ), Vector2( 36, 34 ), Vector2( 36, 33 ), Vector2( 36, 34 ), Vector2( 36, 33 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "correndo_para_direita"
length = 0.65
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 2, 3, 4, 5, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 36, 34 ), Vector2( 36, 33 ), Vector2( 36, 34 ), Vector2( 36, 33 ), Vector2( 36, 34 ), Vector2( 36, 33 ), Vector2( 36, 34 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sombra:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 36, 34 ), Vector2( 36, 33 ), Vector2( 36, 34 ), Vector2( 36, 33 ), Vector2( 36, 34 ), Vector2( 36, 33 ), Vector2( 36, 34 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "correndo_para_esquerda"
length = 0.55
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 13, 14, 15, 16, 17, 15 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 36, 34 ), Vector2( 36, 33 ), Vector2( 36, 34 ), Vector2( 36, 33 ), Vector2( 36, 34 ), Vector2( 36, 33 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sombra:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 36, 34 ), Vector2( 36, 33 ), Vector2( 36, 34 ), Vector2( 36, 33 ), Vector2( 36, 34 ), Vector2( 36, 33 ) ]
}

[sub_resource type="GDScript" id=17]
script/source = "extends Camera2D


# Declare member variables here. Examples:
# var a = 2
# var b = \"text\"


# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
#func _process(delta):
#	pass
"

[sub_resource type="RectangleShape2D" id=15]
extents = Vector2( 28.25, 16.5 )

[sub_resource type="RectangleShape2D" id=18]
extents = Vector2( 17, 12.5 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 3 )

[node name="Tilesets" type="Sprite" parent="."]

[node name="Grass" type="Sprite" parent="Tilesets"]

[node name="GrassBackground" type="Sprite" parent="Tilesets/Grass"]
position = Vector2( 42, 84 )
texture = ExtResource( 2 )
offset = Vector2( -10, 64 )

[node name="GrassBackground2" type="Sprite" parent="Tilesets/Grass"]
position = Vector2( 96, 148 )
texture = ExtResource( 2 )

[node name="GrassBackground3" type="Sprite" parent="Tilesets/Grass"]
position = Vector2( 160, 148 )
texture = ExtResource( 2 )

[node name="GrassBackground4" type="Sprite" parent="Tilesets/Grass"]
position = Vector2( 224, 148 )
texture = ExtResource( 2 )

[node name="GrassBackground5" type="Sprite" parent="Tilesets/Grass"]
position = Vector2( 287, 148 )
texture = ExtResource( 2 )

[node name="GrassBackground6" type="Sprite" parent="Tilesets/Grass"]
position = Vector2( 287, 84 )
texture = ExtResource( 2 )

[node name="GrassBackground7" type="Sprite" parent="Tilesets/Grass"]
position = Vector2( 223, 84 )
texture = ExtResource( 2 )

[node name="GrassBackground8" type="Sprite" parent="Tilesets/Grass"]
position = Vector2( 159, 84 )
texture = ExtResource( 2 )

[node name="GrassBackground10" type="Sprite" parent="Tilesets/Grass"]
position = Vector2( 31, 84 )
texture = ExtResource( 2 )

[node name="GrassBackground17" type="Sprite" parent="Tilesets/Grass"]
position = Vector2( 19, 42 )
texture = ExtResource( 2 )
offset = Vector2( 13, -10 )

[node name="GrassBackground11" type="Sprite" parent="Tilesets/Grass"]
position = Vector2( 82, 99 )
texture = ExtResource( 2 )
offset = Vector2( 13, -10 )

[node name="GrassBackground12" type="Sprite" parent="Tilesets/Grass"]
position = Vector2( 95, 32 )
texture = ExtResource( 2 )

[node name="GrassBackground13" type="Sprite" parent="Tilesets/Grass"]
position = Vector2( 159, 32 )
texture = ExtResource( 2 )

[node name="GrassBackground16" type="Sprite" parent="Tilesets/Grass"]
position = Vector2( 288, 32 )
texture = ExtResource( 2 )

[node name="GrassBackground14" type="Sprite" parent="Tilesets/Grass"]
position = Vector2( 219, 32 )
texture = ExtResource( 2 )

[node name="GrassBackground15" type="Sprite" parent="Tilesets/Grass"]
position = Vector2( 278, 31 )
texture = ExtResource( 2 )

[node name="Dirt" type="Sprite" parent="Tilesets"]

[node name="DirtTileset" type="Sprite" parent="Tilesets/Dirt"]
position = Vector2( 257, 128 )
rotation = 1.5708
scale = Vector2( 0.663074, 0.68868 )
texture = ExtResource( 6 )

[node name="DirtTileset11" type="Sprite" parent="Tilesets/Dirt"]
position = Vector2( 275, 46 )
rotation = 1.5708
scale = Vector2( 0.663074, 0.68868 )
texture = ExtResource( 8 )

[node name="DirtTileset10" type="Sprite" parent="Tilesets/Dirt"]
position = Vector2( 308, 46 )
rotation = 1.5708
scale = Vector2( 0.663074, 0.68868 )
texture = ExtResource( 8 )

[node name="DirtTileset9" type="Sprite" parent="Tilesets/Dirt"]
position = Vector2( 220, 46 )
rotation = 1.5708
scale = Vector2( 0.663074, 0.68868 )
texture = ExtResource( 8 )

[node name="DirtTileset8" type="Sprite" parent="Tilesets/Dirt"]
position = Vector2( 253, 46 )
rotation = 1.5708
scale = Vector2( 0.663074, 0.68868 )
texture = ExtResource( 8 )

[node name="DirtTileset14" type="Sprite" parent="Tilesets/Dirt"]
position = Vector2( 154, 161 )
rotation = 1.5708
scale = Vector2( 0.663074, 0.68868 )
texture = ExtResource( 8 )

[node name="DirtTileset13" type="Sprite" parent="Tilesets/Dirt"]
position = Vector2( 154, 123 )
rotation = 1.5708
scale = Vector2( 0.663074, 0.68868 )
texture = ExtResource( 8 )

[node name="DirtTileset12" type="Sprite" parent="Tilesets/Dirt"]
position = Vector2( 154, 85 )
rotation = 1.5708
scale = Vector2( 0.663074, 0.68868 )
texture = ExtResource( 8 )

[node name="DirtTileset7" type="Sprite" parent="Tilesets/Dirt"]
position = Vector2( 154, 46 )
rotation = 1.5708
scale = Vector2( 0.663074, 0.68868 )
texture = ExtResource( 8 )

[node name="DirtTileset6" type="Sprite" parent="Tilesets/Dirt"]
position = Vector2( 187, 46 )
rotation = 1.5708
scale = Vector2( 0.663074, 0.68868 )
texture = ExtResource( 8 )

[node name="DirtTileset5" type="Sprite" parent="Tilesets/Dirt"]
position = Vector2( 88, 46 )
rotation = 1.5708
scale = Vector2( 0.663074, 0.68868 )
texture = ExtResource( 8 )

[node name="DirtTileset4" type="Sprite" parent="Tilesets/Dirt"]
position = Vector2( 121, 46 )
rotation = 1.5708
scale = Vector2( 0.663074, 0.68868 )
texture = ExtResource( 8 )

[node name="DirtTileset2" type="Sprite" parent="Tilesets/Dirt"]
position = Vector2( 21, 46 )
rotation = 1.5708
scale = Vector2( 0.663074, 0.68868 )
texture = ExtResource( 8 )

[node name="DirtTileset3" type="Sprite" parent="Tilesets/Dirt"]
position = Vector2( 55, 46 )
rotation = 1.5708
scale = Vector2( 0.663074, 0.68868 )
texture = ExtResource( 8 )

[node name="Bushes" type="Sprite" parent="Tilesets"]

[node name="Bush" type="Sprite" parent="Tilesets/Bushes"]
position = Vector2( 271, 47 )
texture = ExtResource( 1 )

[node name="Bush2" type="Sprite" parent="Tilesets/Bushes"]
position = Vector2( 46, 146 )
texture = ExtResource( 1 )

[node name="Collisions" type="StaticBody2D" parent="."]
position = Vector2( 97, 88 )
rotation = 3.14159
scale = Vector2( 25.8009, 3.2321 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Collisions"]
position = Vector2( -8.25552, -29.7022 )
shape = SubResource( 13 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Collisions"]
position = Vector2( -2.44178, 28.7739 )
shape = SubResource( 13 )

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="Collisions"]
position = Vector2( -1.19209e-06, 0 )
polygon = PoolVector2Array( 3.75956, 27.2269, 3.7208, -30.3209, 4.22466, -30.6303, 4.26342, 27.2269 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Collisions"]
position = Vector2( -12.829, 1.23759 )
polygon = PoolVector2Array( 3.75956, 27.2269, 3.7208, -30.3209, 4.22466, -30.6303, 4.26342, 27.2269 )

[node name="CollisionPolygon2D3" type="CollisionPolygon2D" parent="Collisions"]
position = Vector2( -2.55805, -2.16583 )
polygon = PoolVector2Array( -3.02315, 7.73485, -4.651, 7.42542, -4.68975, -24.7518, -3.83707, -25.0612, -3.83707, -27.8457, -2.98438, -27.8457, -2.98439, -21.6578, -2.55804, -21.6578, -2.55805, -5.25979, -2.98439, -5.2598 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Collisions"]
visible = false
position = Vector2( 1.97638, -17.9449 )
rotation = -3.14157
scale = Vector2( 0.0387583, 0.309396 )
shape = SubResource( 14 )

[node name="CollisionPolygon2D4" type="CollisionPolygon2D" parent="Collisions"]
position = Vector2( 1.97638, -17.9449 )
rotation = -3.14157
scale = Vector2( 0.0387583, 0.309396 )
polygon = PoolVector2Array( -9.00921, -9, -9.00953, -11, -8.00953, -11, -8.00969, -12, -6.00969, -12, -6.00984, -13, -3.00984, -13, -3.01, -14, -2.01, -14, -2.01016, -15, 1.98984, -15, 1.99, -14, 3.99, -14, 3.99016, -13, 5.99016, -13, 5.99031, -12, 6.99031, -12, 6.99047, -11, 7.99047, -11, 7.99063, -10, 8.99063, -10, 8.99095, -8, 10.9909, -8, 10.9911, -7, 11.9911, -7, 11.9913, -6, 12.9913, -6, 12.9919, -2, 13.9919, -2, 13.9924, 1, 11.9924, 1, 11.9925, 2, 12.9925, 2, 12.9927, 3, 13.9927, 3, 13.993, 5, 14.993, 5, 14.9932, 6, 13.9932, 6, 13.9933, 7, 10.9933, 7, 10.9935, 8, 11.9935, 8, 11.9941, 12, 8.99412, 12, 8.99396, 11, 5.99396, 11, 5.99428, 13, 4.99428, 13, 4.99444, 14, 1.99444, 14, 1.99428, 13, -0.00572205, 13, -0.00587845, 12, -1.00588, 12, -1.00572, 13, -2.00572, 13, -2.00556, 14, -4.00556, 14, -4.00572, 13, -5.00572, 13, -5.00588, 12, -6.00588, 12, -6.0062, 10, -7.0062, 10, -7.00604, 11, -9.00604, 11, -9.00588, 12, -11.0059, 12, -11.006, 11, -12.006, 11, -12.0067, 7, -14.0067, 7, -14.0068, 6, -15.0068, 6, -15.0071, 4, -14.0071, 4, -14.0075, 2, -13.0075, 2, -13.0076, 1, -14.0076, 1, -14.0078, 0, -15.0078, 0, -15.0081, -2, -14.0081, -2, -14.0083, -3, -13.0083, -3, -13.0087, -6, -12.0087, -6, -12.0089, -7, -11.0089, -7, -11.0091, -8, -9.00905, -8 )

[node name="CollisionPolygon2D5" type="CollisionPolygon2D" parent="Collisions"]
position = Vector2( -6.74198, 12.6851 )
rotation = -3.14157
scale = Vector2( 0.0387583, 0.309396 )
polygon = PoolVector2Array( -9.00921, -9, -9.00953, -11, -8.00953, -11, -8.00967, -12, -6.00969, -12, -6.00984, -13, -3.00984, -13, -3.01, -14, -2.01, -14, -2.01016, -15, 1.98984, -15, 1.99, -14, 3.99, -14, 3.99016, -13, 5.99016, -13, 5.99031, -12, 6.99031, -12, 6.99047, -11, 7.99047, -11, 7.99063, -10, 8.99063, -10, 8.99095, -8, 10.9909, -8, 10.9911, -7, 11.9911, -7, 11.9913, -6, 12.9913, -6, 12.9919, -2, 13.9919, -2, 13.9924, 1, 11.9924, 1, 11.9925, 2, 12.9925, 2, 12.9927, 3, 13.9927, 3, 13.993, 5, 14.993, 5, 14.9932, 6, 13.9932, 6, 13.9933, 7, 10.9933, 7, 10.9935, 8, 11.9935, 8, 11.9941, 12, 8.99412, 12, 8.99396, 11, 5.99396, 11, 5.99428, 13, 4.99428, 13, 4.99444, 14, 1.99444, 14, 1.99428, 13, -0.00572205, 13, -0.00587845, 12, -1.00588, 12, -1.00572, 13, -2.00572, 13, -2.00556, 14, -4.00556, 14, -4.00572, 13, -5.00572, 13, -5.00588, 12, -6.00588, 12, -6.0062, 10, -7.0062, 10, -7.00604, 11, -9.00604, 11, -9.00588, 12, -11.0059, 12, -11.006, 11, -12.006, 11, -12.0067, 7, -14.0067, 7, -14.0068, 6, -15.0068, 6, -15.0071, 4, -14.0071, 4, -14.0075, 2, -13.0075, 2, -13.0076, 1, -14.0076, 1, -14.0078, 0, -15.0078, 0, -15.0081, -2, -14.0081, -2, -14.0083, -3, -13.0083, -3, -13.0087, -6, -12.0087, -6, -12.0089, -7, -11.0089, -7, -11.0091, -8, -9.00905, -8 )

[node name="mecanicaTeste" type="CollisionShape2D" parent="Collisions"]
position = Vector2( -2.20922, -19.492 )
shape = SubResource( 16 )

[node name="Personagem" type="KinematicBody2D" parent="."]
script = ExtResource( 5 )

[node name="Sombra" type="Sprite" parent="Personagem"]
position = Vector2( 36, 34 )
scale = Vector2( 1.1875, 1 )
texture = ExtResource( 7 )

[node name="Sprite" type="Sprite" parent="Personagem"]
position = Vector2( 36, 34 )
texture = ExtResource( 4 )
hframes = 60
frame = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="Personagem"]
position = Vector2( 35.5, 35 )
rotation = 1.5708
shape = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Personagem"]
anims/RESET = SubResource( 4 )
anims/bater_baixo = SubResource( 10 )
anims/bater_cima = SubResource( 11 )
anims/bater_direita = SubResource( 9 )
anims/bater_esquerda = SubResource( 12 )
anims/correndo_para_baixo = SubResource( 6 )
anims/correndo_para_cima = SubResource( 7 )
anims/correndo_para_direita = SubResource( 5 )
anims/correndo_para_esquerda = SubResource( 8 )

[node name="Camera" type="Camera2D" parent="Personagem"]
position = Vector2( 159, 90 )
current = true
limit_smoothed = true
smoothing_enabled = true
script = SubResource( 17 )

[node name="Pontos" type="Label" parent="Personagem/Camera"]
pause_mode = 2
margin_left = 127.0
margin_top = -89.0
margin_right = 159.0
margin_bottom = -68.0
text = "0"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="Personagem/Camera"]

[node name="Popups" type="Popup" parent="Personagem/Camera/CanvasLayer"]
pause_mode = 2
margin_right = 40.0
margin_bottom = 40.0

[node name="Popup3" type="Popup" parent="Personagem/Camera/CanvasLayer/Popups"]
margin_right = 40.0
margin_bottom = 40.0

[node name="Label" type="Label" parent="Personagem/Camera/CanvasLayer/Popups/Popup3"]
margin_left = 115.0
margin_top = 161.0
margin_right = 194.0
margin_bottom = 192.0
text = "Pressione M
"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Popup2" type="Popup" parent="Personagem/Camera/CanvasLayer/Popups"]
pause_mode = 2
margin_left = 111.0
margin_top = 61.0
margin_right = 215.0
margin_bottom = 101.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Personagem/Camera/CanvasLayer/Popups/Popup2"]
pause_mode = 2
margin_right = 98.0
margin_bottom = 45.0
text = "Errou"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Popup" type="Popup" parent="Personagem/Camera/CanvasLayer/Popups"]
pause_mode = 2
margin_right = 40.0
margin_bottom = 40.0

[node name="Label" type="Label" parent="Personagem/Camera/CanvasLayer/Popups/Popup"]
pause_mode = 2
margin_left = 48.0
margin_top = 30.0
margin_right = 278.0
margin_bottom = 44.0
text = "Qual a maior diversidade existente?"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Personagem/Camera/CanvasLayer/Popups/Popup"]
pause_mode = 2
margin_left = 245.0
margin_top = 6.0
margin_right = 297.0
margin_bottom = 26.0
text = "CLOSE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="Personagem/Camera/CanvasLayer/Popups/Popup"]
pause_mode = 2
margin_left = 56.0
margin_top = 48.0
margin_right = 77.0
margin_bottom = 68.0
text = "A"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Personagem/Camera/CanvasLayer/Popups/Popup/Button2"]
pause_mode = 2
margin_left = 25.0
margin_top = 2.0
margin_right = 84.0
margin_bottom = 16.0
text = "Answer 1"

[node name="Button3" type="Button" parent="Personagem/Camera/CanvasLayer/Popups/Popup"]
pause_mode = 2
margin_left = 56.0
margin_top = 73.0
margin_right = 77.0
margin_bottom = 93.0
text = "B"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Personagem/Camera/CanvasLayer/Popups/Popup/Button3"]
pause_mode = 2
margin_left = 25.0
margin_top = 3.0
margin_right = 84.0
margin_bottom = 17.0
text = "Answer 2"

[node name="Button4" type="Button" parent="Personagem/Camera/CanvasLayer/Popups/Popup"]
pause_mode = 2
margin_left = 56.0
margin_top = 99.0
margin_right = 77.0
margin_bottom = 119.0
text = "C"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Personagem/Camera/CanvasLayer/Popups/Popup/Button4"]
pause_mode = 2
margin_left = 26.0
margin_top = 3.0
margin_right = 85.0
margin_bottom = 17.0
text = "Answer 3"

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 187, 16 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 85, 29 )
shape = SubResource( 15 )

[node name="Area2D2" type="Area2D" parent="."]
position = Vector2( 74, 150 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
position = Vector2( 7, 2.5 )
shape = SubResource( 18 )

[connection signal="pressed" from="Personagem/Camera/CanvasLayer/Popups/Popup/Button" to="." method="_on_Button_pressed_close"]
[connection signal="pressed" from="Personagem/Camera/CanvasLayer/Popups/Popup/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Personagem/Camera/CanvasLayer/Popups/Popup/Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="Personagem/Camera/CanvasLayer/Popups/Popup/Button4" to="." method="_on_Button4_pressed"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="area_entered" from="Area2D2" to="." method="_on_Area2D2_area_entered"]
[connection signal="body_entered" from="Area2D2" to="." method="_on_Area2D2_body_entered"]
